# proyecto-formativo-sia

./: README.md
backend/: .env  .gitignore  manage.py  pyproject.toml
backend/apps/materials/: models.py  serializers.py  views.py
backend/apps/users/: __init__.py  models.py  serializers.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: base.py
backend/modules/home/: admin.py  apps.py  urls.py  views.py
backend/modules/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/modules/products/migrations/: 0001_initial.py
backend/modules/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/modules/users/migrations/: 0001_initial.py  0002_role_description_type_document_description.py  0003_alter_user_number_document_alter_user_phone_number_and_more.py  0003_type_document_enum.py  0004_merge_0003_type_document_enum_and_bigint.py  0005_role_optional.py
backend/sia_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: index.html
frontend/SideBar-samuel/: index.html  package-lock.json  package.json
frontend/SideBar-samuel/src/: index.css
frontend/SideBar-samuel/src/assets/: data.json
frontend/SideBar-samuel/src/components/: Card.jsx  Chart.jsx  Sidebar.jsx  Table.jsx
frontend/SideBar-samuel/src/pages/: Dashboard.jsx
frontend/src/: App.jsx  index.css
