[project]
name = "backend"
version = "0.1.0"
description = ""
[tool.poetry]
package-mode = false
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "mongoengine (>=0.29.3,<0.30.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "django-rest-framework-mongoengine (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-debug-toolbar (>=6.2.0,<7.0.0)"
]
