[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

django = "^6.0.3"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.9.0"
python-decouple = "^3.8"
mongoengine = "^0.29.3"
python-dotenv = "^1.2.2"
django-rest-framework-mongoengine = "^3.4.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"