[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "D4nxw",email = "dm510520@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "coreapi (>=2.3.3,<3.0.0)",
    "setuptools (==81.0.0)",
    "legacy-cgi (>=2.6.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
